--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -5,12 +5,15 @@ annotated-types==0.6.0
 anyio==3.7.1
 asttokens==2.4.1
 async-timeout==4.0.3
-certifi==2023.11.17
+aws-msk-iam-sasl-signer-python==1.0.1
+boto3==1.34.50
+botocore==1.34.50
+certifi==2024.2.2
 cffi==1.16.0; implementation_name == "pypy" or platform_python_implementation != "PyPy"
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6; platform_system == "Windows"
-cryptography==42.0.1
+cryptography==42.0.5
 deprecated==1.2.14
 devtools==0.12.2
 diaspora-event-sdk==0.1.2
@@ -18,11 +21,12 @@ exceptiongroup==1.2.0; python_version < "3.11"
 executing==2.0.1
 fakeredis==2.20.1
 fastapi==0.103.2
-globus-sdk==3.34.0
+globus-sdk==3.37.0
 h11==0.14.0
-httpcore==1.0.2
+httpcore==1.0.4
 httpx==0.25.2
 idna==3.6
+jmespath==1.0.1
 kafka-python==2.0.2
 lupa==2.0
 mmh3==4.1.0
@@ -33,17 +37,19 @@ pydantic==2.4.2
 pydantic-core==2.10.1
 pygments==2.17.2
 pyjwt==2.8.0
+python-dateutil==2.8.2
 python-multipart==0.0.6
-PyYAML==6.0.1
+pyyaml==6.0.1
 pyzmq==25.1.2
 redis==4.2.2
 requests==2.31.0
+s3transfer==0.10.0
 six==1.16.0
-sniffio==1.3.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
 starlette==0.27.0
-typing-extensions==4.9.0
+typing-extensions==4.10.0
 ulid-py==1.1.0
-urllib3==2.1.0
+urllib3==1.26.18
 uvicorn==0.21.1
 wrapt==1.16.0
