--- a/example.env
+++ b/example.env
@@ -7,8 +7,7 @@ WORKCELLS_DIR=${PROJECT_DIR}/tests/workcells
 REDIS_DIR=~/.wei/redis
 DOCS=docs/build/*
 WEI_DATA_DIR=~/.wei
-DOCKERFILE=/Users/luckierdodge/AD-SDL/wei/Dockerfile
+DOCKERFILE=${PROJECT_DIR}/Dockerfile
 DOCKERFILE_TEST=${PROJECT_DIR}/tests/Dockerfile.test
 IMAGE_TEST=ghcr.io/ad-sdl/wei_test
-PYPROJECT_TOML=/Users/luckierdodge/AD-SDL/wei/pyproject.toml
 WORKCELL_FILENAME=test_workcell.yaml
