--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,3 +24,4 @@ repos:
         args: [--fix]
       # Run the formatter.
       - id: ruff-format
+exclude: 'docs/build/.*|docs/source/pages/_autosummary/.*'
