--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     'redis>=4.2.2',
     'requests>=2.31.0',
     'ulid-py>=1.1.0',
-    'uvicorn>=0.21',
+    'uvicorn[standard]>=0.21',
 ]
 
 [project.optional-dependencies]
