Collocate file-io functions

--- a/example.env
+++ b/example.env
@@ -1,13 +1,5 @@
-USER_ID=1000
-GROUP_ID=1000
-PROJECT_DIR=
-PROJECT_VERSION=0.5.4
+USER_ID=
+GROUP_ID=
 IMAGE=ghcr.io/ad-sdl/wei
-WORKCELLS_DIR=${PROJECT_DIR}/tests/workcells
-REDIS_DIR=~/.wei/redis
-DOCS=docs/build/*
-WEI_DATA_DIR=~/.wei
-DOCKERFILE=${PROJECT_DIR}/Dockerfile
-DOCKERFILE_TEST=${PROJECT_DIR}/tests/Dockerfile.test
-IMAGE_TEST=ghcr.io/ad-sdl/wei_test
+DOCKERFILE=./Dockerfile
 WORKCELL_FILENAME=test_workcell.yaml
