--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -6,12 +6,12 @@ annotated-types==0.6.0
 anyio==4.3.0
 asttokens==2.4.1
 async-timeout==4.0.3; python_full_version <= "3.11.2"
-autodoc-pydantic==2.1.0
+autodoc-pydantic==2.2.0
 aws-msk-iam-sasl-signer-python==1.0.1
 babel==2.14.0
-boto3==1.34.66
-botocore==1.34.66
-build==1.1.1
+boto3==1.34.93
+botocore==1.34.93
+build==1.2.1
 certifi==2024.2.2
 cffi==1.16.0; implementation_name == "pypy" or platform_python_implementation != "PyPy"
 cfgv==3.4.0
@@ -20,52 +20,53 @@ click==8.1.7
 colorama==0.4.6; sys_platform == "win32" or os_name == "nt" or platform_system == "Windows"
 cryptography==42.0.5
 devtools==0.12.2
-diaspora-event-sdk==0.1.4
+diaspora-event-sdk==0.2.4
 distlib==0.3.8
 docutils==0.20.1
-exceptiongroup==1.2.0; python_version < "3.11"
+exceptiongroup==1.2.1; python_version < "3.11"
 executing==2.0.1
-fastapi==0.110.0
-filelock==3.13.1
-globus-sdk==3.39.0
+fastapi==0.110.2
+filelock==3.14.0
+globus-sdk==3.41.0
 h11==0.14.0
-identify==2.5.35
-idna==3.6
+identify==2.5.36
+idna==3.7
 imagesize==1.4.1
-importlib-metadata==7.0.2; python_full_version < "3.10.2"
+importlib-metadata==7.1.0; python_full_version < "3.10.2"
+importlib-resources==6.4.0; python_version < "3.9"
 iniconfig==2.0.0
 jinja2==3.1.3
 jmespath==1.0.1
 kafka-python==2.0.2
 markupsafe==2.1.5
 mmh3==4.1.0
-mypy==1.9.0
+mypy==1.10.0
 mypy-extensions==1.0.0
 nodeenv==1.8.0
 packaging==24.0
-platformdirs==4.2.0
-pluggy==1.4.0
+platformdirs==4.2.1
+pluggy==1.5.0
 pottery==3.0.0
 pre-commit==3.5.0
-pycparser==2.21; implementation_name == "pypy" or platform_python_implementation != "PyPy"
-pydantic==2.6.4
-pydantic-core==2.16.3
+pycparser==2.22; implementation_name == "pypy" or platform_python_implementation != "PyPy"
+pydantic==2.7.1
+pydantic-core==2.18.2
 pydantic-settings==2.2.1
 pygments==2.17.2
 pyjwt==2.8.0
-pyproject-hooks==1.0.0
-pytest==8.1.1
+pyproject-hooks==1.1.0
+pytest==8.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1; python_version < "3.9"
 pyyaml==6.0.1
-pyzmq==25.1.2
+pyzmq==26.0.2
 redis==4.6.0
 requests==2.31.0
-ruff==0.3.3
+ruff==0.4.2
 s3transfer==0.10.1
-setuptools==69.2.0
+setuptools==69.5.1
 six==1.16.0
 sniffio==1.3.1
 snowballstemmer==2.2.0
@@ -78,22 +79,24 @@ sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
-starlette==0.36.3
+starlette==0.37.2
 tomli==2.0.1; python_version < "3.11"
-types-aiofiles==23.2.0.20240311
+types-aiofiles==23.2.0.20240403
+types-cffi==1.16.0.20240331
 types-cryptography==3.3.23.2
 types-jwt==0.1.3
 types-orjson==3.6.2
-types-pyopenssl==24.0.0.20240311
+types-pyopenssl==24.1.0.20240425
 types-python-dateutil==2.9.0.20240316
 types-pyyaml==6.0.12.20240311
-types-redis==4.6.0.20240311
+types-redis==4.6.0.20240425
 types-requests==2.31.0.6
+types-setuptools==69.5.0.20240423
 types-ujson==5.9.0.0
 types-urllib3==1.26.25.14
-typing-extensions==4.10.0
+typing-extensions==4.11.0
 ulid-py==1.1.0
 urllib3==1.26.18
-uvicorn==0.28.1
-virtualenv==20.25.1
+uvicorn==0.29.0
+virtualenv==20.26.1
 zipp==3.18.1; python_full_version < "3.10.2"
