--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -29,6 +29,7 @@ fastapi==0.110.2
 filelock==3.14.0
 globus-sdk==3.41.0
 h11==0.14.0
+httptools==0.6.1
 identify==2.5.36
 idna==3.7
 imagesize==1.4.1
@@ -98,5 +99,8 @@ typing-extensions==4.11.0
 ulid-py==1.1.0
 urllib3==1.26.18
 uvicorn==0.29.0
+uvloop==0.19.0; (sys_platform != "cygwin" and sys_platform != "win32") and platform_python_implementation != "PyPy"
 virtualenv==20.26.1
+watchfiles==0.21.0
+websockets==12.0
 zipp==3.18.1; python_full_version < "3.10.2"
