--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -7,9 +7,11 @@ name: Docker Build and Publish
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "*" ]
     # Publish semver tags as releases.
     tags: [ '*' ]
+  schedule: # Run on Tuesday's at noon
+    - cron: '0 12 * * 2'
 
 env:
   # Use docker.io for Docker Hub if empty
@@ -61,7 +63,7 @@ jobs:
             type=ref,event=pr
             type=raw,value=latest,enable={{is_default_branch}}
 
-      # Build and push Docker image with Buildx (don't push on PR)
+      # Build and push Docker image with Buildx
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
