--- a/tests/workflows/test_workflow.yaml
+++ b/tests/workflows/test_workflow.yaml
@@ -46,6 +46,7 @@ flowdef:
     module: measure
     action: measure
     comment: Measure the amount of foobar in the sample
+    data_labels: {"test_file": "test_label"}
 
   - name: Discard sample
     module: transfer
