--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     'ulid-py>=1.1.0',
     'uvicorn[standard]>=0.21',
     "websockets>=12.0",
-    "smtplib"
+    "secure-smtplib>=0.1.1",
 ]
 
 [project.optional-dependencies]
