--- a/pyproject.toml
+++ b/pyproject.toml
@@ -137,7 +137,8 @@ select = [
     # "RUF"
 ]
 ignore = [
-    "E501" # Line too long
+    "E501", # Line too long
+    "B006", # Do not use mutable data structures for argument defaults
 ]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
