--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -2,67 +2,68 @@
 # Please do not edit it manually.
 
 alabaster==0.7.13
-annotated-types==0.6.0
-anyio==4.3.0
+annotated-types==0.7.0
+anyio==4.4.0
 asttokens==2.4.1
 async-timeout==4.0.3; python_full_version <= "3.11.2"
 autodoc-pydantic==2.2.0
-babel==2.14.0
+babel==2.16.0
 build==1.2.1
-certifi==2024.2.2
-cffi==1.16.0; implementation_name == "pypy" or platform_python_implementation != "PyPy"
+certifi==2024.7.4
+cffi==1.17.0; implementation_name == "pypy" or platform_python_implementation != "PyPy"
 cfgv==3.4.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6; sys_platform == "win32" or os_name == "nt" or platform_system == "Windows"
-cryptography==42.0.5
+cryptography==43.0.0
 devtools==0.12.2
 diaspora-event-sdk==0.3.2
+diaspora-event-sdk[kafka-python]==0.3.2
 distlib==0.3.8
 docutils==0.20.1
-exceptiongroup==1.2.1; python_version < "3.11"
+exceptiongroup==1.2.2; python_version < "3.11"
 executing==2.0.1
-fastapi==0.110.2
-filelock==3.14.0
-globus-sdk==3.41.0
+fastapi==0.112.1
+filelock==3.15.4
+globus-sdk==3.44.0
 h11==0.14.0
 httptools==0.6.1
-identify==2.5.36
+identify==2.6.0
 idna==3.7
 imagesize==1.4.1
-importlib-metadata==7.1.0; python_full_version < "3.10.2"
-importlib-resources==6.4.0; python_version < "3.9"
+importlib-metadata==8.4.0; python_full_version < "3.10.2"
+importlib-resources==6.4.4; python_version < "3.9"
 iniconfig==2.0.0
-jinja2==3.1.3
+jinja2==3.1.4
 kafka-python==2.0.2
 markupsafe==2.1.5
 mmh3==4.1.0
-mypy==1.10.0
+mypy==1.11.1
 mypy-extensions==1.0.0
-nodeenv==1.8.0
-packaging==24.0
-platformdirs==4.2.1
+nodeenv==1.9.1
+packaging==24.1
+platformdirs==4.2.2
 pluggy==1.5.0
 pottery==3.0.0
 pre-commit==3.5.0
 pycparser==2.22; implementation_name == "pypy" or platform_python_implementation != "PyPy"
-pydantic==2.7.1
-pydantic-core==2.18.2
-pydantic-settings==2.2.1
-pygments==2.17.2
-pyjwt==2.8.0
+pydantic==2.8.2
+pydantic-core==2.20.1
+pydantic-settings==2.4.0
+pygments==2.18.0
+pyjwt==2.9.0
+pyjwt[crypto]==2.9.0
 pyproject-hooks==1.1.0
-pytest==8.2.0
+pytest==8.3.2
 python-dotenv==1.0.1
 python-multipart==0.0.9
 pytz==2024.1; python_version < "3.9"
-pyyaml==6.0.1
-pyzmq==26.0.2
+pyyaml==6.0.2
+pyzmq==26.2.0
 redis==4.6.0
-requests==2.31.0
-ruff==0.4.2
+requests==2.32.3
+ruff==0.6.1
 secure-smtplib==0.1.1
-setuptools==69.5.1
 six==1.16.0
 sniffio==1.3.1
 snowballstemmer==2.2.0
@@ -75,27 +76,28 @@ sphinxcontrib-jquery==4.1
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
-starlette==0.37.2
+starlette==0.38.2
 tomli==2.0.1; python_version < "3.11"
-types-aiofiles==23.2.0.20240403
+types-aiofiles==24.1.0.20240626
 types-cffi==1.16.0.20240331
 types-cryptography==3.3.23.2
 types-jwt==0.1.3
 types-orjson==3.6.2
-types-pyopenssl==24.1.0.20240425
-types-python-dateutil==2.9.0.20240316
-types-pyyaml==6.0.12.20240311
-types-redis==4.6.0.20240425
+types-pyopenssl==24.1.0.20240722
+types-python-dateutil==2.9.0.20240821
+types-pyyaml==6.0.12.20240808
+types-redis==4.6.0.20240819
 types-requests==2.31.0.6
-types-setuptools==69.5.0.20240423
-types-ujson==5.9.0.0
+types-setuptools==73.0.0.20240822
+types-ujson==5.10.0.20240515
 types-urllib3==1.26.25.14
-typing-extensions==4.11.0
+typing-extensions==4.12.2
 ulid-py==1.1.0
-urllib3==1.26.18
-uvicorn==0.29.0
-uvloop==0.19.0; (sys_platform != "cygwin" and sys_platform != "win32") and platform_python_implementation != "PyPy"
-virtualenv==20.26.1
-watchfiles==0.21.0
-websockets==12.0
-zipp==3.18.1; python_full_version < "3.10.2"
+urllib3==1.26.19
+uvicorn==0.30.6
+uvicorn[standard]==0.30.6
+uvloop==0.20.0; (sys_platform != "cygwin" and sys_platform != "win32") and platform_python_implementation != "PyPy"
+virtualenv==20.26.3
+watchfiles==0.23.0
+websockets==13.0
+zipp==3.20.0; python_full_version < "3.10.2"
