Docker cache improvements, fix color terminal output for modules on windows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     'uvicorn[standard]>=0.21',
     "websockets>=12.0",
     "secure-smtplib>=0.1.1",
+    "colorama>=0.4.6",
 ]
 
 [project.optional-dependencies]
