--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "websockets>=12.0",
     "secure-smtplib>=0.1.1",
     "colorama>=0.4.6",
+    "pause>=0.3",
 ]
 
 [project.optional-dependencies]
