--- a/tests/workflows/test_workflow.yaml
+++ b/tests/workflows/test_workflow.yaml
@@ -44,6 +44,12 @@ flowdef:
     data_labels:
       test_file: test_label
 
+  - name: Wait for 5 seconds
+    module: workcell
+    action: delay
+    args:
+      seconds: 5
+
   - name: Discard sample
     module: transfer
     action: transfer
