--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ dependencies = [
     'uvicorn[standard]>=0.21',
     "websockets>=12.0",
     "secure-smtplib>=0.1.1",
+    "aenum>=3.1.15",
 ]
 
 [project.optional-dependencies]
