Add utility module

--- a/tests/workcells/test_workcell.yaml
+++ b/tests/workcells/test_workcell.yaml
@@ -11,6 +11,10 @@ config:
 
 #List of all components accessible in this workcell
 modules:
+  - name: utilities
+    model: utility_module
+    config:
+      rest_node_address: "http://utilities:8001"
   - name: synthesis
     model: test_module
     interface: wei_rest_node
