--- a/compose.yaml
+++ b/compose.yaml
@@ -63,6 +63,14 @@ services:
       --save 600 1
       --loglevel warning
       --appendonly yes'
+  utilities:
+    image: ${IMAGE}
+    container_name: utilities
+    ports:
+      - 8001:8001
+    command: 'python3 -m wei.modules.utility_module
+      --port 8001
+      --alias utilities'
 
 ################
 # Data Storage #
