--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "websockets>=12.0",
     "secure-smtplib>=0.1.1",
     "sqlmodel>=0.0.21",
+    "SQLAlchemy>=2.0.35",
     "psycopg2>=2.9.9",
 ]
 
