--- a/compose.yaml
+++ b/compose.yaml
@@ -50,7 +50,7 @@ services:
       - USER_ID=${USER_ID:-1000}
       - GROUP_ID=${GROUP_ID:-1000}
       - DATABASE_URL=postgresql://rpl:rpl@wei_postgres:5432/resources
-    command: python3 -m wei.server --workcell /workcell_defs/${WORKCELL_FILENAME}
+    command: python3 -m wei.server --workcell /workcell_defs/${WORKCELL_FILENAME} --autostart_engine True
     depends_on:
       - test_wei_redis
       - wei_postgres
