Fix server connection issue

--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -47,7 +47,7 @@ platformdirs==4.2.2
 pluggy==1.5.0
 pottery==3.0.0
 pre-commit==3.5.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pycparser==2.22; implementation_name == "pypy" or platform_python_implementation != "PyPy"
 pydantic==2.8.2
 pydantic-core==2.20.1
