--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ dependencies = [
     "secure-smtplib>=0.1.1",
     "sqlmodel>=0.0.21",
     "SQLAlchemy>=2.0.35",
-    "psycopg2>=2.9.9",
+    "psycopg2-binary>=2.9.9",
 ]
 
 [project.optional-dependencies]
