WIP generalizing database setup/interfacing

--- a/example.env
+++ b/example.env
@@ -1,5 +1,11 @@
-USER_ID=
-GROUP_ID=
+USER_ID=1000
+GROUP_ID=1000
 IMAGE=ghcr.io/ad-sdl/wei
 DOCKERFILE=./Dockerfile
 WORKCELL_FILENAME=test_workcell.yaml
+
+# Database Config
+POSTGRES_USER=rpl
+POSTGRES_PASSWORD=rpl
+POSTGRES_DB=resources
+DB_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@wei_postgres:5432/${POSTGRES_DB}
