--- a/compose.yaml
+++ b/compose.yaml
@@ -7,7 +7,10 @@ services:
     container_name: synthesis
     ports:
       - 2000:2000
-    command: 'python3 wei/tests/test_module/test_rest_node.py --name synthesis
+    env_file: .env
+    volumes:
+      - ~/.wei:/home/app/.wei
+    command: 'python3 wei/tests/test_module/test_rest_node.py --name synthesis --database_url ${DB_URL}
       --port 2000
       --alias synthesis'
   transfer:
@@ -15,7 +18,10 @@ services:
     container_name: transfer
     ports:
       - 2001:2001
-    command: 'python3 wei/tests/test_module/test_rest_node.py --name transfer
+    env_file: .env
+    volumes:
+      - ~/.wei:/home/app/.wei
+    command: 'python3 wei/tests/test_module/test_rest_node.py --name transfer --database_url ${DB_URL}
       --port 2001
       --alias transfer'
   measure:
@@ -23,7 +29,10 @@ services:
     container_name: measure
     ports:
       - 2002:2002
-    command: 'python3 wei/tests/test_module/test_rest_node.py --name measure
+    env_file: .env
+    volumes:
+      - ~/.wei:/home/app/.wei
+    command: 'python3 wei/tests/test_module/test_rest_node.py --name measure --database_url ${DB_URL}
       --port 2002
       --alias measure'
 
@@ -45,12 +54,8 @@ services:
       - diaspora_config:/home/app/.diaspora
       - ./tests/workcells:/workcell_defs
       - ~/.wei:/home/app/.wei
-    environment:
-      - PYTHONUNBUFFERED=1 # Fix weird bug with empty logging
-      - USER_ID=${USER_ID:-1000}
-      - GROUP_ID=${GROUP_ID:-1000}
-      - DATABASE_URL=postgresql://rpl:rpl@wei_postgres:5432/resources
-    command: python3 -m wei.server --workcell /workcell_defs/${WORKCELL_FILENAME}
+    env_file: .env
+    command: python3 -m wei.server --workcell /workcell_defs/${WORKCELL_FILENAME} --database_url ${DB_URL}
     depends_on:
       - test_wei_redis
       - wei_postgres
@@ -69,8 +74,11 @@ services:
   utilities:
     image: ${IMAGE}
     container_name: utilities
+    env_file: .env
     ports:
       - 8001:8001
+    volumes:
+      - ~/.wei:/home/app/.wei
     command: 'python3 -m wei.modules.utility_module
       --port 8001
       --alias utilities'
@@ -81,10 +89,7 @@ services:
   wei_postgres:
     image: postgres:16
     container_name: wei_postgres
-    environment:
-      POSTGRES_USER: rpl
-      POSTGRES_PASSWORD: rpl
-      POSTGRES_DB: resources
+    env_file: .env
     ports:
       - 5432:5432
     volumes:
