--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -9,7 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       name: Checkout code
-    - uses: actions/setup-python@v3
+    - uses: actions/setup-python@v4
       name: Setup Python
+      with:
+        python-version: 3.12
     - uses: pre-commit/action@v3.0.0
       name: Run Pre-Commit Checks
